# scattering

./: .clang-format  CMakeLists.txt  README.md
cmake/: scatlibConfig.cmake.in  scatteringConfig.cmake  scatteringConfig.cmake.in
doc/source/: CMakeLists.txt  conf.py  index.rst  sht.rst
ext/: CMakeLists.txt
ext/shtns/: Makefile  config.status  sht_init.c  sht_legendre.c
include/scatlib/: arts_ssdb.h  eigen.h  integration.h  interpolation.h  particle_habit.h  scattering_data.h  scattering_data_field.h  sht.h  single_scattering_data.h
include/scatlib/utils/: math.h
include/scattering/: arts_ssdb.h  eigen.h  integration.h  interpolation.h  particle.h  particle_habit.h  scattering_data_field.h  sht.h  single_scattering_data.h  stokes.h
include/scattering/utils/: array.h  math.h
python/: CMakeLists.txt  setup.py
python/scatlib/: CMakeLists.txt
python/scattering/: CMakeLists.txt
src/: CMakeLists.txt  arts_ssdb.cxx  sht.cxx  single_scattering_data.cxx
test/: CMakeLists.txt  test_arts_ssdb.py  test_eigen.py  test_integration.py  test_interpolation.py  test_particle_habit.py  test_particle_model.py  test_scattering_data.py  test_scattering_data_field.py  test_scattering_data_field_azimuthally_random.py  test_scattering_data_field_random.py  test_scattering_data_field_spherical.py  test_sht.py  test_single_scattering_data.py  utils.py
test/reference/: __init__.py
